--- a/NEWS.txt
+++ b/NEWS.txt
@@ -1,3 +1,16 @@
+= 2009.01.22
+
+== Delegate methods
+
+- Some API breakage has been introduced in order to allow a delegate callback model from the transceiver. Also, the Receiver and Transmitter classes have been removed due to bad code reuse.
+
+= 2008.12.11
+
+== Updates from Jon Wood:
+
+- Closes connections cleanly instead of stopping the event loop.
+- Adds a send_concat_mt method to Transceivers (not implemented for Transmitter/Receiver), which does the neccesary encoding and message splitting to send messages > 160 characters by splitting them into multiple parts.
+
 = 2008.10.20
  
 == Patch from Josh Bryan:
