--- a/README.rdoc
+++ b/README.rdoc
@@ -37,6 +37,7 @@ You can also send MO messages from the simulator to the sample gateway by typing
 
 == FEATURES/PROBLEMS:
 
+
 * Implements only typical client subset of SMPP 3.4 with single-connection Transceiver.
 * Contributors are encouraged to add missing PDUs.
 
@@ -51,7 +52,7 @@ Start the transceiver. Receive delegate callbacks whenever incoming messages or 
     port, 
     Smpp::Transceiver, 
     config,             # a property hash 
-	delegate 			# delegate class that will receive callbacks on MOs and DRs and other events
+    delegate            # delegate class that will receive callbacks on MOs and DRs and other events
   end
   
   # send a message
@@ -61,31 +62,14 @@ For a more complete example, see examples/sample_gateway.rb
 
 == REQUIREMENTS:
 
+
 * Eventmachine >= 0.10.0
 
 == INSTALL:
 
-* sudo gem install ruby-smpp
+  sudo gem install ruby-smpp
 
 == LICENSE:
 
 Copyright (c) 2008 Apparat AS
-
-Permission is hereby granted, free of charge, to any person obtaining
-a copy of this software and associated documentation files (the
-'Software'), to deal in the Software without restriction, including
-without limitation the rights to use, copy, modify, merge, publish,
-distribute, sublicense, and/or sell copies of the Software, and to
-permit persons to whom the Software is furnished to do so, subject to
-the following conditions:
-
-The above copyright notice and this permission notice shall be
-included in all copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND,
-EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
-MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
-IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
-CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
-TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
-SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+Released under the MIT license.
